src/tests/resources/transcripts/errors/invalid_variable_name.sif
print _
(-- error
"_" may not be used as a variable name
--)
